Fixed the dark mode after the Tabler update

--- a/assets/scss/core/base.scss
+++ b/assets/scss/core/base.scss
@@ -116,7 +116,8 @@ svg.illustration-list {
     height: 44px;
 }
 
-.theme-dark {
+[data-bs-theme=dark],
+body[data-bs-theme=dark] [data-bs-theme=light] {
     .mosparo-logo-container {
         filter: brightness(0) invert(1);
     }
@@ -142,7 +143,8 @@ pre {
     color: rgb(var(--tblr-info-rgb));
 }
 
-.theme-dark {
+[data-bs-theme=dark],
+body[data-bs-theme=dark] [data-bs-theme=light] {
     pre {
         background: var(--tblr-bg-surface-dark);
         color: var(--tblr-light);
