--- a/assets/scss/core/navigation.scss
+++ b/assets/scss/core/navigation.scss
@@ -40,7 +40,8 @@
     }
 }
 
-.theme-dark {
+[data-bs-theme=dark],
+body[data-bs-theme=dark] [data-bs-theme=light] {
     .card-tabs {
         .nav-tabs {
             .nav-link {
